@@ -1,6 +1,6 @@
 =begin private
 
-Keep private to it's not displayed, but will still be indexed by the CPAN
+Keep private so it's not displayed, but will still be indexed by the CPAN
 toolchain.
 
 =head1 Name
@@ -11,76 +11,31 @@ sqitchcommands - List of common sqitch commands
 
 =head1 Usage
 
-  sqitch [<options>] <command> [<command-options>] [<args>]
+  sqitch [--plan-file <file>] [--engine <engine>] [--top-dir <dir> ]
+         [--extension <ext>] [--etc-path] [--quiet] [--verbose] [--version]
+         <command> [<command-options>] [<args>]
 
 =head1 Common Commands
 
 The most commonly used sqitch commands are:
 
-=over
 
-=item L<C<add>|sqitch-add>
+  add        Add a new change to the plan
+  bundle     Bundle a Sqitch project for distribution
+  checkout   Revert, checkout another VCS branch, and re-deploy changes
+  config     Get and set local, user, or system options
+  deploy     Deploy changes to a database
+  help       Display help information about Sqitch commands
+  init       Initialize a project
+  log        Show change logs for a database
+  plan       Show the contents of a plan
+  rebase     Revert and redeploy database changes
+  revert     Revert changes from a database
+  rework     Duplicate a change in the plan and revise its scripts
+  status     Show the current deployment status of a database
+  show       Show information about changes and tags, or change script contents
+  tag        Add or list tags in the plan
+  target     Manage target databases
 
-Add a new change to the plan
-
-=item L<C<bundle>|sqitch-bundle>
-
-Bundle a Sqitch project for distribution
-
-=item L<C<checkout>|sqitch-checkout>
-
-Revert, checkout another VCS branch, and re-deploy changes
-
-=item L<C<config>|sqitch-config>
-
-Get and set local, user, or system options
-
-=item L<C<deploy>|sqitch-deploy>
-
-Deploy changes to a database
-
-=item L<C<help>|sqitch-help>
-
-Display help information about Sqitch commands
-
-=item L<C<init>|sqitch-init>
-
-Initialize a project
-
-=item L<C<log>|sqitch-log>
-
-Show change logs for a database
-
-=item L<C<plan>|sqitch-plan>
-
-Show the contents of a plan
-
-=item L<C<rebase>|sqitch-rebase>
-
-Revert and redeploy database changes
-
-=item L<C<revert>|sqitch-revert>
-
-Revert changes from a database
-
-=item L<C<rework>|sqitch-rework>
-
-Duplicate a change in the plan and revise its scripts
-
-=item L<C<status>|sqitch-status>
-
-Show the current deployment status of a database
-
-=item L<C<show>|sqitch-show>
-
-Show information about changes and tags, or change script contents
-
-=item L<C<tag>|sqitch-tag>
-
-Add or list tags in the plan
-
-=item L<C<target>|sqitch-target>
-
-Manage target databases.
-
-=back
+See C<< sqitch help <command> >> or C<< sqitch help <concept> >> to read about
+a specific command or concept.
